--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,18 @@ fabric.properties
 #
 .*.xml
 *.html
+
+*.iws
+*.iml
+*.ipr
+.classpath
+.project
+.settings
+target
+velocity.log
+
+bin/
+dist/
+target/
+.idea/workspace.xml
+.idea/tasks.xml
