--- a/QCAFrameworks/QCAFrameworks-master/QCAFrameworkWindowsWeb/pom.xml
+++ b/QCAFrameworks/QCAFrameworks-master/QCAFrameworkWindowsWeb/pom.xml
@@ -18,6 +18,18 @@
 	</properties>
 
 	<dependencies>
+        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-ie-driver -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-ie-driver</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-firefox-driver -->
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-firefox-driver</artifactId>
+			<version>3.4.0</version>
+		</dependency>
 		<dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
