--- a/Gestar/pom.xml
+++ b/Gestar/pom.xml
@@ -15,5 +15,10 @@
 	<artifactId>module.windows.web</artifactId>
 	<version>1.0</version>
 	</dependency>
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-csv</artifactId>
+          <version>1.5</version>
+      </dependency>
   </dependencies>
 </project>
